# ct2024s

./: .gitmodules
hw01/: index.html
hw02/: index.html
hw02/src/: Pipfile  chinese_character.txt  cjk_train.json
hw02/src/稿紙生成/script_ntut/: 1_SVGtable.py  CP950.json  info.py
hw03/: index.html
hw03/medium/: .gitattributes
hw03/src/: Pipfile
hw03/src/gray_crop/: s1_rotate_page.py  s2_crop.py
hw04/: index.html
hw05/: index.html
hw05/src/: pyproject.toml
hw06/: hover.html  index.html
hw06/src/upload_csv/: leong.csv
