[tool.poetry]
name = "zi2zi-ct2024s"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
imageio = "2.9.0"
scipy = "^1.13.0"
numpy = "^1.26.4"
pillow = "8.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
